--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,6 +6,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -122,7 +123,6 @@ allow 134.255.218.195;
 allow 135.125.205.25;
 allow 136.244.111.163;
 allow 138.59.18.110;
-allow 139.162.249.209;
 allow 139.99.172.11;
 allow 139.99.184.245;
 allow 139.99.8.57;
@@ -290,7 +290,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -537,6 +536,7 @@ allow 185.56.83.83;
 allow 185.67.82.114;
 allow 185.7.33.146;
 allow 185.82.219.109;
+allow 185.84.31.254;
 allow 185.91.116.202;
 allow 188.165.200.97;
 allow 188.172.229.15;
@@ -723,6 +723,7 @@ allow 2001:620:20d0::20;
 allow 2001:620:20d0::23;
 allow 2001:620:20d0::24;
 allow 2001:638:301:f732::150;
+allow 2001:678:6d4:5130::2;
 allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
 allow 2001:67c:289c::20;
@@ -922,8 +923,6 @@ allow 23.137.253.108;
 allow 23.137.253.110;
 allow 23.137.253.27;
 allow 23.152.24.77;
-allow 23.153.248.33;
-allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
@@ -983,8 +982,6 @@ allow 2600:3c00::f03c:93ff:fe2b:34f6;
 allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
-allow 2602:2da:0:32:5054:ff:fe6c:39dc;
-allow 2602:2da:0:32:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
@@ -1241,6 +1238,7 @@ allow 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
 allow 2a03:4000:6:b175:c429:e0ff:fe67:ea12;
 allow 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 allow 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
+allow 2a03:6f20:531::254;
 allow 2a03:94e0:2421:dead::1;
 allow 2a03:94e0:242c:dead::1;
 allow 2a03:94e0:243a:dead::1;
@@ -1543,13 +1541,14 @@ allow 2a12:5940:c826::2;
 allow 2a12:5940:f0a8::2;
 allow 2a12:a800:1:1:194:26:192:161;
 allow 2a12:a800:2:1:185:241:208:81;
+allow 2a12:a800:2:1:45:138:16:203;
 allow 2a12:bec4:11d3:de9f::1;
 allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
 allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 3.229.185.210;
+allow 3.221.81.9;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.1.201.144;
@@ -1576,11 +1575,13 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.129.199.195;
 allow 45.132.246.245;
+allow 45.133.16.36;
 allow 45.134.225.36;
 allow 45.135.132.20;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.142;
+allow 45.138.16.203;
 allow 45.138.16.222;
 allow 45.138.16.230;
 allow 45.138.16.240;
@@ -1669,6 +1670,7 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -1782,7 +1784,6 @@ allow 85.204.116.93;
 allow 85.239.41.130;
 allow 85.93.218.204;
 allow 86.104.194.13;
-allow 86.104.75.99;
 allow 87.118.110.27;
 allow 87.118.116.103;
 allow 87.118.116.90;
@@ -1819,6 +1820,7 @@ allow 91.202.5.104;
 allow 91.203.144.194;
 allow 91.203.145.116;
 allow 91.206.26.26;
+allow 91.208.206.47;
 allow 91.208.75.153;
 allow 91.208.75.156;
 allow 91.208.75.178;
@@ -1877,6 +1879,7 @@ allow 95.142.161.63;
 allow 95.143.193.125;
 allow 95.164.4.104;
 allow 95.164.46.204;
+allow 95.211.244.28;
 allow 96.126.98.146;
 allow 96.27.198.133;
 allow 98.128.173.33;
