--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -32,6 +32,7 @@ allow 2001:620:20d0::20;
 allow 2001:620:20d0::23;
 allow 2001:620:20d0::24;
 allow 2001:638:301:f732::150;
+allow 2001:678:6d4:5130::2;
 allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
 allow 2001:67c:289c::20;
@@ -131,8 +132,6 @@ allow 2600:3c00::f03c:93ff:fe2b:34f6;
 allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
-allow 2602:2da:0:32:5054:ff:fe6c:39dc;
-allow 2602:2da:0:32:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
@@ -388,6 +387,7 @@ allow 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
 allow 2a03:4000:6:b175:c429:e0ff:fe67:ea12;
 allow 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 allow 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
+allow 2a03:6f20:531::254;
 allow 2a03:94e0:2421:dead::1;
 allow 2a03:94e0:242c:dead::1;
 allow 2a03:94e0:243a:dead::1;
@@ -690,5 +690,6 @@ allow 2a12:5940:c826::2;
 allow 2a12:5940:f0a8::2;
 allow 2a12:a800:1:1:194:26:192:161;
 allow 2a12:a800:2:1:185:241:208:81;
+allow 2a12:a800:2:1:45:138:16:203;
 allow 2a12:bec4:11d3:de9f::1;
 allow 2a12:d8c0:109a:9001::7;
