--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -223,6 +223,7 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
+allow 178.31.161.216;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -290,6 +291,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -923,6 +925,8 @@ allow 23.137.253.108;
 allow 23.137.253.110;
 allow 23.137.253.27;
 allow 23.152.24.77;
+allow 23.153.248.33;
+allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
@@ -982,6 +986,8 @@ allow 2600:3c00::f03c:93ff:fe2b:34f6;
 allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
+allow 2602:2da:0:32:5054:ff:fe6c:39dc;
+allow 2602:2da:0:32:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
@@ -1548,7 +1554,6 @@ allow 31.129.22.65;
 allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 3.221.81.9;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.1.201.144;
@@ -1570,6 +1575,7 @@ allow 37.46.211.24;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
+allow 44.213.18.178;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1641,7 +1647,6 @@ allow 45.95.169.230;
 allow 45.95.169.255;
 allow 46.165.243.36;
 allow 46.182.21.248;
-allow 46.195.245.97;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 46.36.38.151;
@@ -1745,7 +1750,6 @@ allow 77.48.28.237;
 allow 77.48.28.239;
 allow 77.81.247.72;
 allow 77.83.246.112;
-allow 77.90.41.191;
 allow 77.90.41.199;
 allow 77.90.42.201;
 allow 77.90.42.213;
@@ -1784,6 +1788,7 @@ allow 85.204.116.93;
 allow 85.239.41.130;
 allow 85.93.218.204;
 allow 86.104.194.13;
+allow 86.104.75.99;
 allow 87.118.110.27;
 allow 87.118.116.103;
 allow 87.118.116.90;
