--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -649,6 +649,7 @@ deny 2a0e:97c0:3ea:bc::1;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:ed78:7632;
 deny 2a0e:e701:1198::1;
+deny 2a0f:5f40:1000:435::8f;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:85c1:356:bb20::1;
 deny 2a0f:93c1:26:1f2::9ce5;
