--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -292,6 +292,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -301,6 +302,7 @@ allow 185.181.61.142;
 allow 185.183.157.214;
 allow 185.183.159.40;
 allow 185.191.204.254;
+allow 185.193.125.105;
 allow 185.193.158.134;
 allow 185.193.52.180;
 allow 185.195.71.10;
@@ -919,7 +921,6 @@ allow 23.129.64.229;
 allow 23.129.64.230;
 allow 23.130.136.194;
 allow 23.137.248.100;
-allow 23.137.250.34;
 allow 23.137.250.83;
 allow 23.137.253.108;
 allow 23.137.253.110;
@@ -1328,6 +1329,8 @@ allow 2a07:b242:1000:1300:f250:8f0a:cdba:4d76;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a09:6301:0:2e1:b492:c29e:f532:42c6;
+allow 2a0a:3840:1337:125:0:b9c1:7d69:1337;
+allow 2a0a:3840:8078:27:0:504e:1b42:1337;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
@@ -1555,7 +1558,7 @@ allow 31.129.22.65;
 allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 3.230.250.242;
+allow 3.225.9.44;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.1.201.144;
@@ -1584,7 +1587,6 @@ allow 45.129.199.195;
 allow 45.132.246.245;
 allow 45.133.16.36;
 allow 45.134.225.36;
-allow 45.135.132.20;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.142;
@@ -1765,6 +1767,7 @@ allow 80.210.78.252;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
+allow 80.78.27.66;
 allow 80.82.78.14;
 allow 80.94.92.106;
 allow 81.16.33.42;
@@ -1777,7 +1780,6 @@ allow 82.153.138.119;
 allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
-allow 82.221.139.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
