--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,6 +6,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -291,6 +292,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -1213,7 +1215,6 @@ allow 2a02:418:6017::148;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c207:3002:8283::1;
-allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
 allow 2a03:3b40:fe:3b1::1;
 allow 2a03:4000:15:928:dead:beef:ca1f:1337;
@@ -1537,12 +1538,13 @@ allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
-allow 2a12:5940:144f::2;
+allow 2a12:5940:13e2::2;
 allow 2a12:5940:52c2::2;
 allow 2a12:5940:9101::2;
 allow 2a12:5940:b4db::2;
 allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c051::2;
+allow 2a12:5940:c826::2;
 allow 2a12:5940:f0a8::2;
 allow 2a12:a800:1:1:194:26:192:161;
 allow 2a12:a800:2:1:185:241:208:81;
@@ -1555,7 +1557,6 @@ allow 31.133.0.210;
 allow 31.220.75.237;
 allow 31.42.185.134;
 allow 35.0.127.52;
-allow 35.171.68.254;
 allow 37.114.41.119;
 allow 37.1.201.144;
 allow 37.120.190.85;
@@ -1576,6 +1577,7 @@ allow 37.46.211.24;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
+allow 44.206.91.251;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1583,6 +1585,7 @@ allow 45.129.199.195;
 allow 45.132.246.245;
 allow 45.133.16.36;
 allow 45.134.225.36;
+allow 45.135.132.20;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.142;
@@ -1668,7 +1671,6 @@ allow 51.81.254.14;
 allow 51.81.254.15;
 allow 51.81.254.3;
 allow 5.181.80.107;
-allow 5.182.86.212;
 allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
@@ -1770,6 +1772,7 @@ allow 82.118.242.36;
 allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
+allow 82.221.139.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
@@ -1811,6 +1814,7 @@ allow 89.58.26.216;
 allow 89.58.41.156;
 allow 89.58.41.251;
 allow 89.58.63.200;
+allow 91.103.253.141;
 allow 91.132.144.59;
 allow 91.193.18.63;
 allow 91.202.5.104;
@@ -1860,13 +1864,12 @@ allow 94.16.116.81;
 allow 94.16.116.86;
 allow 94.16.121.226;
 allow 94.16.121.91;
-allow 94.177.106.55;
+allow 94.228.163.25;
 allow 94.228.169.70;
 allow 94.230.208.147;
 allow 94.230.208.148;
 allow 94.32.66.15;
 allow 94.75.225.81;
-allow 95.128.43.164;
 allow 95.142.161.63;
 allow 95.143.193.125;
 allow 95.164.4.104;
