Update lists at 20240731-2100

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -359,6 +359,7 @@ deny 2a02:418:6017::148;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
 deny 2a02:c207:3002:8283::1;
+deny 2a02:ec0:209:10::4;
 deny 2a02:ed06::222;
 deny 2a03:3b40:fe:3b1::1;
 deny 2a03:4000:15:928:dead:beef:ca1f:1337;
@@ -435,6 +436,7 @@ deny 2a04:52c0:104:fe02::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
+deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
 deny 2a04:52c0:130:d285::1;
 deny 2a04:9dc0:31::c0cc:4d;
@@ -654,6 +656,7 @@ deny 2a0f:5f40:1000:435::8f;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:85c1:356:bb20::1;
 deny 2a0f:93c1:26:1f2::9ce5;
+deny 2a0f:9400:7e11:b852::1;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
 deny 2a0f:df00:0:255::196;
@@ -683,13 +686,12 @@ deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:1e01::2;
 deny 2a12:5940:13e2::2;
+deny 2a12:5940:144f::2;
 deny 2a12:5940:52c2::2;
-deny 2a12:5940:9101::2;
 deny 2a12:5940:b4db::2;
 deny 2a12:5940:b4dd::2;
 deny 2a12:5940:c051::2;
 deny 2a12:5940:c826::2;
-deny 2a12:5940:f0a8::2;
 deny 2a12:a800:1:1:194:26:192:161;
 deny 2a12:a800:2:1:185:241:208:81;
 deny 2a12:a800:2:1:45:138:16:203;
