--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1215,6 +1215,7 @@ allow 2a02:418:6017::148;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c207:3002:8283::1;
+allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
 allow 2a03:3b40:fe:3b1::1;
 allow 2a03:4000:15:928:dead:beef:ca1f:1337;
@@ -1291,6 +1292,7 @@ allow 2a04:52c0:104:fe02::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
+allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
@@ -1510,6 +1512,7 @@ allow 2a0f:5f40:1000:435::8f;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:bb20::1;
 allow 2a0f:93c1:26:1f2::9ce5;
+allow 2a0f:9400:7e11:b852::1;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
@@ -1539,13 +1542,12 @@ allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
+allow 2a12:5940:144f::2;
 allow 2a12:5940:52c2::2;
-allow 2a12:5940:9101::2;
 allow 2a12:5940:b4db::2;
 allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c051::2;
 allow 2a12:5940:c826::2;
-allow 2a12:5940:f0a8::2;
 allow 2a12:a800:1:1:194:26:192:161;
 allow 2a12:a800:2:1:185:241:208:81;
 allow 2a12:a800:2:1:45:138:16:203;
@@ -1577,7 +1579,6 @@ allow 37.46.211.24;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 44.206.91.251;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1619,7 +1620,6 @@ allow 45.141.215.97;
 allow 45.148.10.111;
 allow 45.148.10.169;
 allow 45.150.108.229;
-allow 45.15.157.177;
 allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
@@ -1671,10 +1671,12 @@ allow 51.81.254.14;
 allow 51.81.254.15;
 allow 51.81.254.3;
 allow 5.181.80.107;
+allow 5.182.86.212;
 allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 52.0.19.108;
 allow 5.255.100.219;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1722,8 +1724,8 @@ allow 64.227.115.78;
 allow 64.227.159.148;
 allow 66.146.193.33;
 allow 66.220.242.222;
-allow 66.78.40.102;
 allow 66.78.40.182;
+allow 66.78.40.34;
 allow 67.219.109.141;
 allow 71.19.144.106;
 allow 71.19.144.222;
@@ -1769,6 +1771,7 @@ allow 81.17.20.59;
 allow 81.17.20.60;
 allow 81.17.28.95;
 allow 82.118.242.36;
+allow 82.153.138.119;
 allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
@@ -1804,8 +1807,8 @@ allow 89.147.110.214;
 allow 89.147.110.82;
 allow 89.147.111.124;
 allow 89.147.111.87;
-allow 89.185.85.140;
 allow 89.187.143.31;
+allow 89.213.174.248;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.36.231.128;
@@ -1864,12 +1867,18 @@ allow 94.16.116.81;
 allow 94.16.116.86;
 allow 94.16.121.226;
 allow 94.16.121.91;
+allow 94.177.106.37;
+allow 94.177.106.46;
+allow 94.177.106.54;
+allow 94.177.106.55;
+allow 94.177.106.59;
 allow 94.228.163.25;
 allow 94.228.169.70;
 allow 94.230.208.147;
 allow 94.230.208.148;
 allow 94.32.66.15;
 allow 94.75.225.81;
+allow 95.128.43.164;
 allow 95.142.161.63;
 allow 95.143.193.125;
 allow 95.164.4.104;
