Update lists at 20240801-0900

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -129,19 +129,21 @@ deny 2402:1f00:8201:61::da05:d4c6;
 deny 2600:3c00::f03c:91ff:fe73:f9ba;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:93ff:fe2b:34f6;
+deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
 deny 2602:2da:0:32:5054:ff:fe6c:39dc;
 deny 2602:2da:0:32:5054:ff:fe7e:7c21;
-deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::5;
 deny 2602:f9f3:0:2::8d;
 deny 2602:f9f3:0:2::91;
+deny 2602:fc24:12:77c0::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:a679::1;
+deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:2b4::1;
 deny 2602:fc24:19:30::1;
 deny 2602:fc24:19:eb06::1;
@@ -151,9 +153,8 @@ deny 2602:fef9:100:1100::199;
 deny 2603:c026:c102:5ff:2603:c026:c102:5ff;
 deny 2604:2dc0:202:300::ed3;
 deny 2604:6600:0:42::2;
-deny 2604:a880:400:d0::1744:4001;
-deny 2604:a880:400:d0::20fd:1001;
-deny 2604:a880:400:d0::238b:e001;
+deny 2604:a880:400:d0::1b1c:1;
+deny 2604:a880:400:d0::21e4:a001;
 deny 2604:b480:3:6::2;
 deny 2605:2700:0:2:a800:ff:fe39:574;
 deny 2605:6400:10:1008:1111:1111:1111:1111;
@@ -421,6 +422,7 @@ deny 2800:ba0:6:c1::4858;
 deny 2a00:11c0:1b:aa2::5;
 deny 2a00:11c0:1c:311::5;
 deny 2a00:11c0:1f:1::55;
+deny 2a00:1728:3e::c0cc:82;
 deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:19a0:3:d0:0:252e:d06d:1;
 deny 2a00:19a0:3:d3:0:252e:d315:1;
@@ -793,6 +795,7 @@ deny 2a12:5940:144f::2;
 deny 2a12:5940:52c2::2;
 deny 2a12:5940:9101::2;
 deny 2a12:5940:b4db::2;
+deny 2a12:5940:b4dd::2;
 deny 2a12:5940:c051::2;
 deny 2a12:5940:c826::2;
 deny 2a12:5940:f0a8::2;
