--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -15,6 +15,7 @@ allow 103.251.167.20;
 allow 103.28.52.93;
 allow 104.167.242.116;
 allow 104.167.242.117;
+allow 104.168.32.115;
 allow 104.192.1.138;
 allow 104.192.3.74;
 allow 104.219.232.126;
@@ -35,6 +36,7 @@ allow 104.244.78.233;
 allow 104.244.79.44;
 allow 104.244.79.50;
 allow 104.244.79.61;
+allow 107.173.179.59;
 allow 107.174.138.172;
 allow 107.189.10.175;
 allow 107.189.11.111;
@@ -113,6 +115,7 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.35.245.150;
 allow 118.163.74.160;
+allow 121.160.200.13;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
@@ -133,7 +136,6 @@ allow 141.98.11.62;
 allow 141.98.119.106;
 allow 142.44.133.81;
 allow 142.44.234.69;
-allow 142.93.6.21;
 allow 143.110.156.176;
 allow 144.172.118.4;
 allow 144.172.118.55;
@@ -145,7 +147,6 @@ allow 146.59.35.246;
 allow 146.59.35.38;
 allow 146.70.164.210;
 allow 146.70.81.186;
-allow 147.182.213.61;
 allow 147.45.116.145;
 allow 147.45.49.17;
 allow 147.45.78.34;
@@ -180,6 +181,7 @@ allow 162.251.5.152;
 allow 163.172.45.102;
 allow 163.5.143.76;
 allow 164.132.172.209;
+allow 165.22.190.0;
 allow 165.73.242.163;
 allow 166.70.207.2;
 allow 171.25.193.20;
@@ -224,7 +226,7 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
-allow 178.31.161.216;
+allow 178.31.160.23;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -292,7 +294,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -648,6 +649,7 @@ allow 194.163.157.49;
 allow 194.164.122.21;
 allow 194.26.192.161;
 allow 194.26.192.77;
+allow 194.48.248.130;
 allow 194.62.248.21;
 allow 195.160.220.104;
 allow 195.16.73.134;
@@ -822,6 +824,7 @@ allow 204.137.14.106;
 allow 204.137.14.92;
 allow 204.194.29.4;
 allow 204.27.64.10;
+allow 204.48.26.215;
 allow 204.8.156.142;
 allow 204.85.191.7;
 allow 204.85.191.8;
@@ -1017,8 +1020,11 @@ allow 23.129.64.229;
 allow 23.129.64.230;
 allow 23.130.136.194;
 allow 23.137.248.100;
+allow 23.137.248.139;
+allow 23.137.250.34;
 allow 23.137.250.83;
 allow 23.137.253.108;
+allow 23.137.253.109;
 allow 23.137.253.110;
 allow 23.137.253.27;
 allow 23.152.24.77;
@@ -1056,7 +1062,6 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
-allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.26.133.152;
 allow 23.94.211.25;
@@ -1070,7 +1075,6 @@ allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
 allow 2402:1f00:8201:61::2d91:af20;
 allow 2402:1f00:8201:61::da05:d4c6;
-allow 24.144.108.118;
 allow 24.240.72.170;
 allow 2.58.56.220;
 allow 2.58.56.248;
@@ -1080,19 +1084,21 @@ allow 2.58.56.90;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:93ff:fe2b:34f6;
+allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
 allow 2602:2da:0:32:5054:ff:fe6c:39dc;
 allow 2602:2da:0:32:5054:ff:fe7e:7c21;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::5;
 allow 2602:f9f3:0:2::8d;
 allow 2602:f9f3:0:2::91;
+allow 2602:fc24:12:77c0::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:eb06::1;
@@ -1102,9 +1108,8 @@ allow 2602:fef9:100:1100::199;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
-allow 2604:a880:400:d0::1744:4001;
-allow 2604:a880:400:d0::20fd:1001;
-allow 2604:a880:400:d0::238b:e001;
+allow 2604:a880:400:d0::1b1c:1;
+allow 2604:a880:400:d0::21e4:a001;
 allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:6400:10:1008:1111:1111:1111:1111;
@@ -1373,6 +1378,7 @@ allow 2800:ba0:6:c1::4858;
 allow 2a00:11c0:1b:aa2::5;
 allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
+allow 2a00:1728:3e::c0cc:82;
 allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:19a0:3:d0:0:252e:d06d:1;
 allow 2a00:19a0:3:d3:0:252e:d315:1;
@@ -1745,6 +1751,7 @@ allow 2a12:5940:144f::2;
 allow 2a12:5940:52c2::2;
 allow 2a12:5940:9101::2;
 allow 2a12:5940:b4db::2;
+allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c051::2;
 allow 2a12:5940:c826::2;
 allow 2a12:5940:f0a8::2;
@@ -1779,6 +1786,7 @@ allow 37.46.211.24;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
+allow 44.223.243.149;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1830,10 +1838,10 @@ allow 45.66.35.20;
 allow 45.66.35.21;
 allow 45.66.35.22;
 allow 45.66.35.35;
+allow 45.79.144.222;
 allow 45.79.177.21;
 allow 45.79.50.161;
 allow 45.80.158.205;
-allow 45.80.158.23;
 allow 45.80.158.27;
 allow 45.8.22.207;
 allow 45.83.104.137;
@@ -1911,6 +1919,7 @@ allow 5.2.79.190;
 allow 5.34.182.203;
 allow 5.42.80.232;
 allow 5.42.80.233;
+allow 5.42.80.234;
 allow 5.42.80.235;
 allow 54.36.101.21;
 allow 54.36.108.162;
