--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -202,7 +202,6 @@ allow 172.232.164.52;
 allow 172.81.131.139;
 allow 172.81.131.156;
 allow 172.81.132.94;
-allow 172.81.133.34;
 allow 173.249.57.253;
 allow 176.114.248.225;
 allow 176.118.193.33;
@@ -246,6 +245,7 @@ allow 179.43.179.60;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
+allow 18.235.46.61;
 allow 184.105.48.40;
 allow 184.75.221.107;
 allow 185.100.85.132;
@@ -1221,7 +1221,6 @@ allow 2605:6400:d814:2775::;
 allow 2605:6400:d814:4181::1;
 allow 2605:a140:2186:5418::1;
 allow 2605:aa80:0:9::3;
-allow 2605:aa80:3:6c14::1;
 allow 2607:5300:201:3100::535e;
 allow 2607:5300:203:b45b::;
 allow 2607:5300:205:200::163a;
@@ -1726,6 +1725,7 @@ allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:e701:1198::1;
 allow 2a0f:5f40:1000:435::8f;
 allow 2a0f:85c1:356:3238::1;
+allow 2a0f:85c1:356:bb20::1;
 allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:9400:7e11:b852::1;
 allow 2a0f:df00:0:255::194;
@@ -1758,6 +1758,8 @@ allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
 allow 2a12:5940:144f::2;
+allow 2a12:5940:52c2::2;
+allow 2a12:5940:9101::2;
 allow 2a12:5940:b4db::2;
 allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c051::2;
@@ -1774,7 +1776,6 @@ allow 31.133.0.210;
 allow 31.220.75.237;
 allow 31.42.185.134;
 allow 35.0.127.52;
-allow 35.169.175.210;
 allow 37.114.41.119;
 allow 37.1.201.144;
 allow 37.120.190.85;
@@ -1850,6 +1851,7 @@ allow 45.79.144.222;
 allow 45.79.177.21;
 allow 45.79.50.161;
 allow 45.80.158.205;
+allow 45.80.158.23;
 allow 45.80.158.27;
 allow 45.8.22.207;
 allow 45.83.104.137;
@@ -1947,6 +1949,7 @@ allow 64.227.159.148;
 allow 66.146.193.33;
 allow 66.220.242.222;
 allow 66.78.40.182;
+allow 66.78.40.34;
 allow 67.219.109.141;
 allow 71.19.144.106;
 allow 71.19.144.222;
@@ -2029,6 +2032,7 @@ allow 89.147.110.214;
 allow 89.147.110.82;
 allow 89.147.111.124;
 allow 89.147.111.87;
+allow 89.185.85.140;
 allow 89.187.143.31;
 allow 89.213.174.248;
 allow 89.234.157.254;
@@ -2095,6 +2099,7 @@ allow 94.177.106.54;
 allow 94.177.106.55;
 allow 94.177.106.59;
 allow 94.228.163.25;
+allow 94.228.169.70;
 allow 94.230.208.147;
 allow 94.230.208.148;
 allow 94.32.66.15;
