--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -259,7 +259,6 @@ deny 2605:6400:d814:2775::;
 deny 2605:6400:d814:4181::1;
 deny 2605:a140:2186:5418::1;
 deny 2605:aa80:0:9::3;
-deny 2605:aa80:3:6c14::1;
 deny 2607:5300:201:3100::535e;
 deny 2607:5300:203:b45b::;
 deny 2607:5300:205:200::163a;
@@ -763,6 +762,7 @@ deny 2a0e:b107:dd0::3:ed78:7632;
 deny 2a0e:e701:1198::1;
 deny 2a0f:5f40:1000:435::8f;
 deny 2a0f:85c1:356:3238::1;
+deny 2a0f:85c1:356:bb20::1;
 deny 2a0f:93c1:26:1f2::9ce5;
 deny 2a0f:9400:7e11:b852::1;
 deny 2a0f:df00:0:255::194;
@@ -795,6 +795,8 @@ deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:1e01::2;
 deny 2a12:5940:13e2::2;
 deny 2a12:5940:144f::2;
+deny 2a12:5940:52c2::2;
+deny 2a12:5940:9101::2;
 deny 2a12:5940:b4db::2;
 deny 2a12:5940:b4dd::2;
 deny 2a12:5940:c051::2;
