Update lists at 20240802-0000

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,7 +6,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -15,6 +14,7 @@ allow 103.251.167.20;
 allow 103.28.52.93;
 allow 104.167.242.116;
 allow 104.167.242.117;
+allow 104.167.242.118;
 allow 104.168.32.115;
 allow 104.192.1.138;
 allow 104.192.3.74;
@@ -89,6 +89,7 @@ allow 107.189.8.238;
 allow 107.189.8.5;
 allow 107.189.8.56;
 allow 107.189.8.65;
+allow 107.20.138.34;
 allow 108.181.124.143;
 allow 108.181.27.205;
 allow 108.181.69.243;
@@ -140,7 +141,6 @@ allow 142.93.6.21;
 allow 143.110.156.176;
 allow 144.172.118.4;
 allow 144.172.118.55;
-allow 144.172.118.76;
 allow 144.172.118.90;
 allow 144.24.197.112;
 allow 146.59.234.220;
@@ -296,7 +296,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -665,8 +664,6 @@ allow 195.20.17.94;
 allow 195.26.247.0;
 allow 195.80.151.242;
 allow 195.88.74.206;
-allow 198.251.84.163;
-allow 198.251.84.237;
 allow 198.46.166.157;
 allow 198.58.107.53;
 allow 198.96.155.3;
@@ -1109,6 +1106,7 @@ allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:eb06::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
+allow 2602:fccf:310:1::c;
 allow 2602:fef9:100:1100::199;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:202:300::ed3;
@@ -1163,10 +1161,6 @@ allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
 allow 2605:6400:30:f0ed:9151:66ed:6366:5c74;
-allow 2605:6400:30:f174:1:1:1:1;
-allow 2605:6400:30:f174:42:42::;
-allow 2605:6400:30:f174:42:42:42:42;
-allow 2605:6400:30:f174:cafe::;
 allow 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 allow 2605:6400:30:f307:1712:1a11:9b1c:ab7f;
 allow 2605:6400:30:f307:3aa6:91d4:da12:7eee;
@@ -1208,7 +1202,6 @@ allow 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 allow 2605:6400:40:fe09::2;
 allow 2605:6400:d814:1b8::4;
 allow 2605:6400:d814:2775::;
-allow 2605:6400:d814:4181::1;
 allow 2605:a140:2186:5418::1;
 allow 2605:aa80:0:9::3;
 allow 2607:5300:201:3100::535e;
@@ -1705,6 +1698,7 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
+allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:97c0:3ea:372::1;
@@ -1748,14 +1742,13 @@ allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
 allow 2a12:5940:144f::2;
 allow 2a12:5940:52c2::2;
-allow 2a12:5940:9101::2;
 allow 2a12:5940:b4db::2;
 allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c051::2;
 allow 2a12:5940:c826::2;
+allow 2a12:5940:f0a8::2;
 allow 2a12:a800:1:1:194:26:192:161;
 allow 2a12:a800:2:1:185:241:208:81;
-allow 2a12:a800:2:1:45:138:16:203;
 allow 2a12:bec4:11d3:de9f::1;
 allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
@@ -1763,7 +1756,6 @@ allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.220.75.237;
 allow 31.42.185.134;
-allow 3.217.78.121;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.1.201.144;
@@ -1796,7 +1788,6 @@ allow 45.135.132.20;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.142;
-allow 45.138.16.203;
 allow 45.138.16.222;
 allow 45.138.16.230;
 allow 45.138.16.240;
@@ -1827,6 +1818,7 @@ allow 45.148.10.111;
 allow 45.148.10.169;
 allow 45.150.108.229;
 allow 45.151.122.34;
+allow 45.15.157.177;
 allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
@@ -1987,6 +1979,7 @@ allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.139.190;
+allow 82.85.247.254;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.115;
@@ -1997,8 +1990,10 @@ allow 84.252.120.163;
 allow 85.17.9.83;
 allow 85.204.116.92;
 allow 85.204.116.93;
+allow 85.239.41.130;
 allow 85.93.218.204;
 allow 86.104.194.13;
+allow 86.104.194.27;
 allow 86.104.75.99;
 allow 87.118.110.27;
 allow 87.118.116.103;
@@ -2018,7 +2013,6 @@ allow 89.147.110.214;
 allow 89.147.110.82;
 allow 89.147.111.124;
 allow 89.147.111.87;
-allow 89.185.85.140;
 allow 89.187.143.31;
 allow 89.213.174.248;
 allow 89.234.157.254;
