--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,4 +1,3 @@
-allow 100.29.123.149;
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
@@ -7,6 +6,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -130,6 +130,7 @@ allow 134.255.218.195;
 allow 135.125.205.25;
 allow 136.244.111.163;
 allow 138.59.18.110;
+allow 139.162.249.209;
 allow 139.99.172.11;
 allow 139.99.184.245;
 allow 139.99.8.57;
@@ -301,6 +302,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -1093,7 +1095,6 @@ allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2.58.56.90;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
-allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:93ff:fe2b:34f6;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:92ff:fed8:d9ef;
@@ -1725,7 +1726,6 @@ allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:e701:1198::1;
 allow 2a0f:5f40:1000:435::8f;
 allow 2a0f:85c1:356:3238::1;
-allow 2a0f:85c1:356:bb20::1;
 allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:9400:7e11:b852::1;
 allow 2a0f:df00:0:255::194;
@@ -1764,6 +1764,7 @@ allow 2a12:5940:b4db::2;
 allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c051::2;
 allow 2a12:5940:c826::2;
+allow 2a12:5940:f0a8::2;
 allow 2a12:a800:1:1:194:26:192:161;
 allow 2a12:a800:2:1:185:241:208:81;
 allow 2a12:a800:2:1:45:138:16:178;
@@ -1837,6 +1838,7 @@ allow 45.148.10.111;
 allow 45.148.10.169;
 allow 45.150.108.229;
 allow 45.151.122.34;
+allow 45.15.157.177;
 allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
@@ -1896,6 +1898,7 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1923,6 +1926,7 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
+allow 54.208.188.213;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
@@ -1945,11 +1949,9 @@ allow 64.227.159.148;
 allow 66.146.193.33;
 allow 66.220.242.222;
 allow 66.78.40.182;
-allow 66.78.40.34;
 allow 67.219.109.141;
 allow 71.19.144.106;
 allow 71.19.144.222;
-allow 72.14.179.10;
 allow 72.211.49.235;
 allow 74.48.108.229;
 allow 74.82.47.194;
