Update lists at 20240803-1500

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,7 +6,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -123,6 +122,7 @@ allow 121.160.200.13;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
+allow 125.253.31.196;
 allow 128.127.180.156;
 allow 128.31.0.13;
 allow 130.193.15.186;
@@ -151,6 +151,7 @@ allow 146.59.35.246;
 allow 146.59.35.38;
 allow 146.70.164.210;
 allow 146.70.81.186;
+allow 147.182.213.61;
 allow 147.45.116.145;
 allow 147.45.49.17;
 allow 147.45.78.34;
@@ -191,6 +192,7 @@ allow 162.251.5.152;
 allow 163.172.45.102;
 allow 163.5.143.76;
 allow 164.132.172.209;
+allow 165.22.190.0;
 allow 165.73.242.163;
 allow 166.70.207.2;
 allow 171.25.193.20;
@@ -251,7 +253,6 @@ allow 179.43.179.60;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
-allow 181.41.143.240;
 allow 184.105.48.40;
 allow 184.75.221.107;
 allow 185.100.85.132;
@@ -302,7 +303,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -526,6 +526,7 @@ allow 185.243.218.46;
 allow 185.243.218.61;
 allow 185.243.218.89;
 allow 185.243.218.95;
+allow 185.243.23.81;
 allow 185.244.192.175;
 allow 185.244.192.184;
 allow 185.246.128.161;
@@ -834,6 +835,7 @@ allow 204.137.14.106;
 allow 204.137.14.92;
 allow 204.194.29.4;
 allow 204.27.64.10;
+allow 204.48.26.215;
 allow 204.8.156.142;
 allow 204.85.191.7;
 allow 204.85.191.8;
@@ -1074,7 +1076,6 @@ allow 23.155.24.4;
 allow 23.155.24.6;
 allow 23.155.8.104;
 allow 23.236.122.62;
-allow 23.26.133.152;
 allow 23.94.211.25;
 allow 2400:6180:100:d0::2c:3001;
 allow 2400:8901::f03c:93ff:fe68:23b3;
@@ -1105,7 +1106,6 @@ allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::5;
-allow 2602:f9f3:0:2::8d;
 allow 2602:f9f3:0:2::91;
 allow 2602:fc24:12:77c0::1;
 allow 2602:fc24:12:81a6::1;
@@ -1121,6 +1121,9 @@ allow 2602:fef9:100:1100::199;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
+allow 2604:a880:400:d0::1b1c:1;
+allow 2604:a880:400:d0::21e4:a001;
+allow 2604:a880:400:d0::238b:e001;
 allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:6400:10:1008:1111:1111:1111:1111;
@@ -1756,12 +1759,12 @@ allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
+allow 2a12:5940:144f::2;
 allow 2a12:5940:9101::2;
 allow 2a12:5940:b4db::2;
 allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c051::2;
 allow 2a12:5940:c826::2;
-allow 2a12:5940:f0a8::2;
 allow 2a12:a800:1:1:194:26:192:161;
 allow 2a12:a800:2:1:185:241:208:81;
 allow 2a12:a800:2:1:45:138:16:178;
@@ -1772,7 +1775,6 @@ allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.220.75.237;
 allow 31.42.185.134;
-allow 34.199.156.106;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.1.201.144;
@@ -1836,10 +1838,10 @@ allow 45.148.10.111;
 allow 45.148.10.169;
 allow 45.150.108.229;
 allow 45.151.122.34;
-allow 45.15.157.177;
 allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
+allow 45.66.35.10;
 allow 45.66.35.20;
 allow 45.66.35.21;
 allow 45.66.35.22;
@@ -1889,6 +1891,7 @@ allow 51.81.254.14;
 allow 51.81.254.15;
 allow 51.81.254.3;
 allow 5.181.80.107;
+allow 5.182.86.212;
 allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
@@ -1923,6 +1926,7 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
+allow 54.225.65.206;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
@@ -1969,7 +1973,6 @@ allow 77.81.247.72;
 allow 77.83.246.112;
 allow 77.91.85.147;
 allow 78.142.18.219;
-allow 79.124.8.241;
 allow 79.137.198.213;
 allow 80.210.78.252;
 allow 80.241.60.207;
