--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -138,8 +138,6 @@ allow 2602:2da:0:32:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
-allow 2602:f9f3:0:2::5;
-allow 2602:f9f3:0:2::91;
 allow 2602:fc24:12:77c0::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
@@ -792,11 +790,13 @@ allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
 allow 2a12:5940:144f::2;
+allow 2a12:5940:52c2::2;
 allow 2a12:5940:9101::2;
 allow 2a12:5940:b4db::2;
 allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c051::2;
 allow 2a12:5940:c826::2;
+allow 2a12:5940:f0a8::2;
 allow 2a12:a800:1:1:194:26:192:161;
 allow 2a12:a800:2:1:185:241:208:81;
 allow 2a12:a800:2:1:45:138:16:178;
